--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "knex": "^3.1.0",
+    "nodemon": "^3.0.2",
+    "sqlite3": "^5.1.7"
+  }
 }
