--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon api/server.js"
+    "server": "nodemon api/server.js",
+    "authServer": "nodemon api/authServer.js"
   },
   "keywords": [],
   "author": "",
